--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Mac OS X files
+.DS_Store
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
@@ -13,3 +16,14 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+# Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
+.glide/
+*.idea/
+
+# Local configs
+.idea/
+pkg/mod
+pkg/sumdb
+**/.vscode
+/bin
